--- a/portfolio.html
+++ b/portfolio.html
@@ -69,63 +69,98 @@
             </ul>
             <ul class="project-img-list list">
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 1.jpg" alt="Веб-сайт Технокряк" width="370">
+                    <p class="project-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title">Технокряк</h2>
                     <p class="project-img-text">Веб-сайт</p>
                 </div>
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title">Постер New Orlean vs Golden Star</h2>
                     <p class="project-img-text">Дизайн</p>
                 </div>
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 3.jpg" alt="Приложение для Ресторан Seafood" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title">Ресторан Seafood</h2>
                     <p class="project-img-text">Приложение</p>
                 </div>
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 4.jpg" alt="Проект Prime" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title">Проект Prime</h2>
                     <p class="project-img-text">Маркетинг</p>
                 </div>
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 5.jpg" alt="Проект Boxes" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title">Проект Boxes</h2>
                     <p class="project-img-text">Приложение</p>
                 </div>
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title" lang="en">Inspiration has no Borders</h2>
                     <p class="project-img-text">Веб-сайт</p>
                 </div>
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 7.jpg" alt="Издание Limited Edition" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title">Издание Limited Edition</h2>
                     <p class="project-img-text">Дизайн</p>
                 </div>
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 8.jpg" alt="Проект LAB" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title">Проект LAB</h2>
                     <p class="project-img-text">Маркетинг</p>
                
                 </li>
                 <li class="project-img-item">
+                    <div class="project-top-wrapper"> 
                     <img src="./images/portfolio 9.jpg" alt="Приложение Growing Business" width="370">
+                    <p class="project-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deserunt mollitia ipsam natus necessitatibus
+                                        veritatis eaque culpa, omnis delectus accusantium?</p>
+                    </div>
                     <div class="subtitle">
                     <h2 class="project-img-title" lang="en">Growing Business</h2>
                     <p class="project-img-text">Приложение</p>
